--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
   <head>
-    <title>Read Only by HTML5 UP</title>
+    <title>Russell Ong Online Resume</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -27,36 +27,36 @@
       </header>
       <nav id="nav">
         <ul>
-          <li><a href="#one" class="active">About</a></li>
-          <li><a href="#two">Things I Can Do</a></li>
-          <li><a href="#three">A Few Accomplishments</a></li>
-          <li><a href="#four">Contact</a></li>
+          <li><a href="#one" class="active">About Me</a></li>
+          <li><a href="#two">Work Experiences</a></li>
+          <li><a href="#three">Skillsets</a></li>
+          <li><a href="#four">Projects</a></li>
         </ul>
       </nav>
       <footer>
         <ul class="icons">
           <li>
-            <a href="#" class="icon brands fa-twitter"
-              ><span class="label">Twitter</span></a
+            <a href="#" class="icon brands fa-linkedin"
+              ><span class="label">LinkedIn</span></a
             >
           </li>
           <li>
-            <a href="#" class="icon brands fa-facebook-f"
+            <a href="https://www.linkedin.com/in/russell-ong-01a499a1/" class="icon brands fa-facebook-f"
               ><span class="label">Facebook</span></a
             >
           </li>
           <li>
-            <a href="#" class="icon brands fa-instagram"
+            <a href="https://www.instagram.com/hayimrussell/" class="icon brands fa-instagram"
               ><span class="label">Instagram</span></a
             >
           </li>
           <li>
-            <a href="#" class="icon brands fa-github"
+            <a href="https://github.com/russellry" class="icon brands fa-github"
               ><span class="label">Github</span></a
             >
           </li>
           <li>
-            <a href="#" class="icon solid fa-envelope"
+            <a href="russellongry@gmail.com" class="icon solid fa-envelope"
               ><span class="label">Email</span></a
             >
           </li>
@@ -81,7 +81,7 @@
               My name is Russell, my friends call me Russ for short. I am
               currently in my 3rd year of Computer Science in the National
               University of Singapore (NUS). Before this I was studying business
-              and specialized in entrepreneurship in Ngee Ann Polytechnic (NP).
+              and specialized in entrepreneurship in Ngee Ann Polytechnic (NP). I love technology and business which is why everything that I have been doing involved both the technical and business aspects of things.
             </p>
           </div>
         </section>
@@ -89,30 +89,52 @@
         <!-- Two -->
         <section id="two">
           <div class="container">
-            <h3>Technical Skillsets</h3>
-			<h4>Programming Related</h4>
+            <h3>Work Experiences</h3>
+			<h4>DBS UNI.CORN+ Tech Program</h4>
 			<p>
-				Languages: Java, Python, JavaScript, Swift, Dart </br>
-				Web Dev: HTML, CSS, React </br>
-				Mobile Dev: xCode, Android Studio, Flutter</br>
-				Database: PostgreSQL
+					•	Created responsive landing pages on React.js </br>
+					•	Developed features on payment app on Swift (iOS) </br>
+					•	Polished ideation, validation and pitching skills</br>
 			</p>
-			<h4>Other Skillsets</h4>
-			<p>Digital Marketing: Google Ads, Facebook Ads, TubeBuddy</br>
-				Design/Prototyping: Sketch, Flinto </br>
-				Editing: Adobe Photoshop, Lightroom, Flash, Sony Vegas</br>
+			<h4>YouTube Consultant</h4>
+			<p>     •	Bolstered 27 million views on channel </br>
+					•	Created strategies for clients to follow suit
+
+			</p>
+			<h4>Century Technology</h4>
+			<p>     •	Proposed & implemented database management system </br>
+					•	Aided in ad-hoc tasks 
 
 			</p>
           </div>
-        </section>
+		</section>
+		
+		        <!-- Three -->
+				<section id="three">
+						<div class="container">
+						  <h3>Skillsets</h3>
+						  <h4>Programming Related</h4>
+						  <p>
+							  Languages: Java, Python, JavaScript, Swift, Dart </br>
+							  Web Dev: HTML, CSS, React </br>
+							  Mobile Dev: xCode, Android Studio, Flutter</br>
+							  Database: PostgreSQL
+						  </p>
+						  <h4>Other Skillsets</h4>
+						  <p>Digital Marketing: Google Ads, Facebook Ads, TubeBuddy</br>
+							  Design/Prototyping: Sketch, Flinto </br>
+							  Editing: Adobe Photoshop, Lightroom, Flash, Sony Vegas</br>
+			  
+						  </p>
+						</div>
+					  </section>
 
-        <!-- Three -->
-        <section id="three">
+        <!-- Four -->
+        <section id="four">
           <div class="container">
-            <h3>Cool Projects I've Worked On</h3>
+            <h3>Projects</h3>
             <p>
 			  I have a total of <b>18 fun projects</b>, but I have short listed these few that showcases the range of my abilities as a programmer & problem solver.
-			  I do briefly talk about the other projects in a short snippet at the end too!
             </p>
             <div class="features">
               <article>
@@ -124,7 +146,9 @@
                   <p>
                     Still in the midst of implementation, it is a mobile platform specifically catering to solving the needs of ad-hoc and part time job hunters to be matched with an employer looking for desperate last minute replacements or help.
                   </p>
-                </div>
+				</div>
+				<p>Others include: </br>
+					- Lost n Found: Social platform for organizing and planning search missions for missing people</p>
               </article>
               <article>
                 <a href="#" class="image"
@@ -133,7 +157,7 @@
                 <div class="inner">
                   <h4>Corporate: DBS PayLah!</h4>
                   <p>
-					  I worked in a team of four to design and complete 5 features in 3 months. We mainly did most of the front-end work in terms of mobile development and creating a website using React for a landing page.
+					  I worked in a team of four to design and complete 5 features in 3 months. We mainly did most of the front-end work in terms of mobile development on Swift and created a website using React for a landing page.
                   </p>
                 </div>
               </article>
@@ -144,10 +168,18 @@
                 <div class="inner">
                   <h4>Hackathon: Bank Of China</h4>
                   <p>
-					  Developed a mobile application built on Unity which scans for the bank's logo and a video would pop up and play. Was thought to be an alternative to billboard advertisements.
+					  Developed a mobile application built on Unity, leveraging on popular AR technology, which scans for the bank's logo and a video would pop up and play. Was thought to be an alternative to billboard advertisements.
 
 				</p>
 				</div>
+				<p>Others include: </br>
+					- Llama Attack: Tower Defense game developed with game sprites (PSA Hackathon) </br>
+					- Comp2Go: Organize competitions around different sports with a built in prize structure (HacknRoll 2018) </br>
+					- SendHalp: Collate into lists anything the user desires instead of scorlling through chunks of texts (HacknRoll 2019)</br>
+					- OptiRescue: Plot travel routes for rescue vehicles in cases of natural disasters (AngelHack 2019)</br>
+					- Voicy: Collect and give data feedback on the Singlish language through the use of a forum based Telegram bot </br>
+				</p>
+  
 			  </article>
 			  <article>
 					<a href="#" class="image"
@@ -159,6 +191,11 @@
 						Trained a professional poker player bot using neural networks and machine learning algorithms. Applied reinforcement learning over randomness and against manual players.
 					</p>
 					</div>
+					<p>Others include: </br>
+						- Dictionary: Help non-locals learn and keep English words in the app, included with a game with a time limit </br>
+						- Information Retrieval: Use NLTK and corpus to speed up searching information about Singapore laws </br>
+						- KickStarted: Copy of KickStarter to create a fully functioning website integrating full stack implementation.</br>
+											</p>
 				  </article>
 				  <article>
 						<a href="#" class="image"
@@ -172,61 +209,6 @@
 						</div>
 					  </article>
             </div>
-          </div>
-        </section>
-
-        <!-- Four -->
-        <section id="four">
-          <div class="container">
-            <h3>Contact Me</h3>
-            <p>
-              Integer eu ante ornare amet commetus vestibulum blandit integer in
-              curae ac faucibus integer non. Adipiscing cubilia elementum
-              integer. Integer eu ante ornare amet commetus.
-            </p>
-            <form method="post" action="#">
-              <div class="row gtr-uniform">
-                <div class="col-6 col-12-xsmall">
-                  <input type="text" name="name" id="name" placeholder="Name" />
-                </div>
-                <div class="col-6 col-12-xsmall">
-                  <input
-                    type="email"
-                    name="email"
-                    id="email"
-                    placeholder="Email"
-                  />
-                </div>
-                <div class="col-12">
-                  <input
-                    type="text"
-                    name="subject"
-                    id="subject"
-                    placeholder="Subject"
-                  />
-                </div>
-                <div class="col-12">
-                  <textarea
-                    name="message"
-                    id="message"
-                    placeholder="Message"
-                    rows="6"
-                  ></textarea>
-                </div>
-                <div class="col-12">
-                  <ul class="actions">
-                    <li>
-                      <input
-                        type="submit"
-                        class="primary"
-                        value="Send Message"
-                      />
-                    </li>
-                    <li><input type="reset" value="Reset Form" /></li>
-                  </ul>
-                </div>
-              </div>
-            </form>
           </div>
         </section>
 
