--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, user-scalable=no"
-    />
-    <link rel="stylesheet" href="assets/css/main.css" />
+	/>
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+	<link rel="stylesheet" href="assets/css/main.css" />
   </head>
   <body class="is-preload">
     <!-- Header -->
@@ -22,7 +24,7 @@
         <h1 id="logo"><a href="#">Russell Ong</a></h1>
         <p>
           Software Engineer by day,<br />
-          sky's the limit at night.
+          sky's the limit by night.
         </p>
       </header>
       <nav id="nav">
@@ -36,15 +38,11 @@
       <footer>
         <ul class="icons">
           <li>
-            <a href="#" class="icon brands fa-linkedin"
+            <a href="https://www.linkedin.com/in/russell-ong-01a499a1/" class="icon brands fa-linkedin"
               ><span class="label">LinkedIn</span></a
             >
           </li>
-          <li>
-            <a href="https://www.linkedin.com/in/russell-ong-01a499a1/" class="icon brands fa-facebook-f"
-              ><span class="label">Facebook</span></a
-            >
-          </li>
+
           <li>
             <a href="https://www.instagram.com/hayimrussell/" class="icon brands fa-instagram"
               ><span class="label">Instagram</span></a
@@ -56,7 +54,7 @@
             >
           </li>
           <li>
-            <a href="russellongry@gmail.com" class="icon solid fa-envelope"
+            <a href="mailto:russellongry@gmail.com" class="icon solid fa-envelope"
               ><span class="label">Email</span></a
             >
           </li>
@@ -78,10 +76,12 @@
               <h3>About Me</h3>
             </header>
             <p>
-              My name is Russell, my friends call me Russ for short. I am
+              Hey there! My name is Russell and I am
               currently in my 3rd year of Computer Science in the National
-              University of Singapore (NUS). Before this I was studying business
-              and specialized in entrepreneurship in Ngee Ann Polytechnic (NP). I love technology and business which is why everything that I have been doing involved both the technical and business aspects of things.
+			  University of Singapore (NUS), specialising in Artificial Intelligence & Information Retrieval. </br>
+			  
+			  Before this I was studying business
+              and specialized in entrepreneurship in Ngee Ann Polytechnic (NP). The idea of combining both technology and business really excites me, which is why everything that I have been doing involved both the technical and business aspects of things.
             </p>
           </div>
         </section>
@@ -89,23 +89,60 @@
         <!-- Two -->
         <section id="two">
           <div class="container">
-            <h3>Work Experiences</h3>
-			<h4>DBS UNI.CORN+ Tech Program</h4>
-			<p>
-					•	Created responsive landing pages on React.js </br>
-					•	Developed features on payment app on Swift (iOS) </br>
-					•	Polished ideation, validation and pitching skills</br>
-			</p>
-			<h4>YouTube Consultant</h4>
-			<p>     •	Bolstered 27 million views on channel </br>
-					•	Created strategies for clients to follow suit
+						<h3>Work Experiences</h3>
+					<div class = "row">					
+						<div class="col-2">
+								<img src="images/dbs_unicorn.svg" style = "width: 100%" alt="" />
+							</div>
+						<div class = "col-10">
+							<h4>DBS UNI.CORN+ Tech Program</h4>
+						<h5>DBS Bank</h5>
+						<h5>Technical & Business Intern (Consumer Banking Group)</h5>
+						<h5>May 2019 - Aug 2019</h5>
 
-			</p>
-			<h4>Century Technology</h4>
-			<p>     •	Proposed & implemented database management system </br>
-					•	Aided in ad-hoc tasks 
+					</div>
+					<p>
+							•	Created responsive landing pages on React.js </br>
+							•	Developed features on payment app on Swift (iOS) </br>
+							•	Polished ideation, validation and pitching skills</br>
+					</p>
+					</div>
 
-			</p>
+					<div class = "row">					
+						<div class="col-2">
+								<img src="images/swift_turn.png" style = "width: 100%" alt="" />
+							</div>
+						<div class = "col-10">
+							<h4>YouTube Consultant</h4>
+						<h5>Swift Turn Marketing</h5>
+						<h5>Director of Social Media Marketing (YouTube)</h5>
+						<h5>Nov 2018 - May 2019</h5>
+					</div>
+					<p>
+							•	Created specific strategies to target niche for clients </br>
+							•	Managed network of YouTube channels - 27 million views on single YouTube channel </br>
+							•	Liased with video producers, affiliates and partners </br>
+							•	Automated large chunk of workflow from content creation to video production </br>
+
+					</p>
+					</div>
+					<div class = "row">					
+						<div class="col-2">
+								<img src="images/century_tec.png" style = "width: 100%" alt="" />
+							</div>
+						<div class = "col-10">
+							<h4>Small Medium Enterprise Internship</h4>
+						<h5>Century Technology</h5>
+						<h5>IT & Business Intern </h5>
+						<h5>Sep 2014 - Feb 2015</h5>
+
+					</div>
+					<p>
+							•	Proposed and created database management system to log workers' compensation hours </br>
+							•	Documented system into a guide book for future usage </br>
+
+					</p>
+					</div>
           </div>
 		</section>
 		
@@ -114,16 +151,55 @@
 						<div class="container">
 						  <h3>Skillsets</h3>
 						  <h4>Programming Related</h4>
-						  <p>
-							  Languages: Java, Python, JavaScript, Swift, Dart </br>
-							  Web Dev: HTML, CSS, React </br>
-							  Mobile Dev: xCode, Android Studio, Flutter</br>
-							  Database: PostgreSQL
-						  </p>
-						  <h4>Other Skillsets</h4>
-						  <p>Digital Marketing: Google Ads, Facebook Ads, TubeBuddy</br>
-							  Design/Prototyping: Sketch, Flinto </br>
-							  Editing: Adobe Photoshop, Lightroom, Flash, Sony Vegas</br>
+						  <ul class="list-group">
+								<li class="list-group-item  align-items-center">
+								  Languages:</br>
+								  <span class="badge badge-primary badge-pill">Java (Proficient)</span>
+								  <span class="badge badge-primary badge-pill">Python (Proficient)</span>
+								  <span class="badge badge-primary badge-pill">JavaScript (Intermediate)</span>
+								  <span class="badge badge-primary badge-pill">Swift (Intermediate)</span>
+								  <span class="badge badge-primary badge-pill">Dart (Basic)</span>
+
+								</li>
+								<li class="list-group-item align-items-center">
+								  Web Development: </br>
+								  <span class="badge badge-primary badge-pill">HTML (Intermediate)</span>
+								  <span class="badge badge-primary badge-pill">CSS (Intermediate)</span>
+								  <span class="badge badge-primary badge-pill">React (Intermediate)</span>								</li>
+								<li class="list-group-item align-items-center">
+								  Mobile Development:</br>
+								  <span class="badge badge-primary badge-pill">xCode (Intermediate)</span>
+								  <span class="badge badge-primary badge-pill">Android Studio (Basic)</span>
+								  <span class="badge badge-primary badge-pill">Flutter (Basic)</span>
+								</li>
+								<li class="list-group-item align-items-center">
+										Database:</br>
+										<span class="badge badge-primary badge-pill">PostgreSQL (Intermediate)</span>
+									  </li>
+							  </ul>
+							  <h4>Other Skillsets</h4>
+							  <ul class="list-group">
+									<li class="list-group-item  align-items-center">
+											Digital Marketing:</br>
+									  <span class="badge badge-primary badge-pill">Google Ads (Intermediate)</span>
+									  <span class="badge badge-primary badge-pill">Facebook Ads (Intermediate)</span>
+									  <span class="badge badge-primary badge-pill">TubeBuddy (Intermediate)</span>
+									  <span class="badge badge-primary badge-pill">ClickFunnels (Intermediate)</span>
+									</li>
+									<li class="list-group-item align-items-center">
+									  Picture/Video Editing: </br>
+									  <span class="badge badge-primary badge-pill">Sony Vegas (Proficient)</span>
+									  <span class="badge badge-primary badge-pill">Adobe Photoshop (Intermediate)</span>
+									  <span class="badge badge-primary badge-pill">Adobe Flash (Intermediate)</span>
+									  <span class="badge badge-primary badge-pill">Adobe Lightroom (Basic)</span>								</li>
+									</li>
+									<li class="list-group-item align-items-center">
+										Design/Protyping:</br>
+									  <span class="badge badge-primary badge-pill">Sketch (Intermediate)</span>
+									  <span class="badge badge-primary badge-pill">Flinto (Basic)</span>
+									  <span class="badge badge-primary badge-pill">SuperNova (Basic)</span>
+									</li>
+								  </ul>
 			  
 						  </p>
 						</div>
