--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
             <div class="features">
               <article>
                 <a href="#" class="image"
-                  ><img src="images/pic01.jpg" alt=""
+                  ><img src="images/kasegu.png" alt=""
                 /></a>
                 <div class="inner">
                   <h4>Startup: Kasegu</h4>
@@ -223,23 +223,28 @@
                     Still in the midst of implementation, it is a mobile platform specifically catering to solving the needs of ad-hoc and part time job hunters to be matched with an employer looking for desperate last minute replacements or help.
                   </p>
 				</div>
-				<p>Others include: </br>
-					- Lost n Found: Social platform for organizing and planning search missions for missing people</p>
+				<ul class="list-group list-group-flush">
+					</br>
+
+					<h4 style = "text-align: center;">Others Include:</h4>
+						<li class="list-group-item">Lost n Found: Social platform for organizing and planning search missions for missing people
+							</li>
+				</ul>
               </article>
               <article>
                 <a href="#" class="image"
-                  ><img src="images/pic02.jpg" alt=""
+                  ><img src="images/paylah.jpg" alt=""
                 /></a>
                 <div class="inner">
                   <h4>Corporate: DBS PayLah!</h4>
                   <p>
-					  I worked in a team of four to design and complete 5 features in 3 months. We mainly did most of the front-end work in terms of mobile development on Swift and created a website using React for a landing page.
+					  I worked in a team of four, where we had to design and complete 5 features in 3 months. We mainly did most of the front-end work in terms of mobile development on Swift and created a website using React for a landing page.
                   </p>
                 </div>
               </article>
               <article>
                 <a href="#" class="image"
-                  ><img src="images/pic03.jpg" alt=""
+                  ><img src="images/boc_hackathon.gif" style="width:100%;" alt=""
                 /></a>
                 <div class="inner">
                   <h4>Hackathon: Bank Of China</h4>
@@ -248,13 +253,22 @@
 
 				</p>
 				</div>
-				<p>Others include: </br>
-					- Llama Attack: Tower Defense game developed with game sprites (PSA Hackathon) </br>
-					- Comp2Go: Organize competitions around different sports with a built in prize structure (HacknRoll 2018) </br>
-					- SendHalp: Collate into lists anything the user desires instead of scorlling through chunks of texts (HacknRoll 2019)</br>
-					- OptiRescue: Plot travel routes for rescue vehicles in cases of natural disasters (AngelHack 2019)</br>
-					- Voicy: Collect and give data feedback on the Singlish language through the use of a forum based Telegram bot </br>
-				</p>
+
+				<ul class="list-group list-group-flush">
+					</br>
+
+					<h4 style = "text-align: center;">Others Include:</h4>
+						<li class="list-group-item">					Llama Attack: Tower Defense game developed with game sprites.
+							</li>
+						<li class="list-group-item">					Comp2Go: Organize sports competitions with a built in prize structure.
+							</li>
+						<li class="list-group-item">					SendHalp: Collation of items into lists on Telegram.
+							</li>
+						<li class="list-group-item">					OptiRescue: Plot travel routes for rescue vehicles in cases of natural disasters.
+							</li>
+						<li class="list-group-item">					Voicy: Telegram bot forum to encourage speaking of Singlish.
+							</li>
+				</ul>
   
 			  </article>
 			  <article>
@@ -267,15 +281,22 @@
 						Trained a professional poker player bot using neural networks and machine learning algorithms. Applied reinforcement learning over randomness and against manual players.
 					</p>
 					</div>
-					<p>Others include: </br>
-						- Dictionary: Help non-locals learn and keep English words in the app, included with a game with a time limit </br>
-						- Information Retrieval: Use NLTK and corpus to speed up searching information about Singapore laws </br>
-						- KickStarted: Copy of KickStarter to create a fully functioning website integrating full stack implementation.</br>
-											</p>
+					<ul class="list-group list-group-flush">
+						</br>
+
+							<h4 style = "text-align: center;">Others Include:</h4>
+								<li class="list-group-item">											Dictionary: Help non-locals learn and keep English words in the app, included with a game with a time limit.
+									</li>
+								<li class="list-group-item">											Information Retrieval: Use NLTK and corpus to speed up searching information about Singapore laws.
+									</li>
+								<li class="list-group-item">											KickStarted: Copy of KickStarter to create a fully functioning website integrating full stack implementation.
+									</li>
+
+						</ul>
 				  </article>
 				  <article>
 						<a href="#" class="image"
-						  ><img src="images/pic03.jpg" alt=""
+						  ><img src="images/toto.jpg	" alt=""
 						/></a>
 						<div class="inner">
 						  <h4>Side Project: Toto Generator</h4>
