--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
   <head>
-    <title>Russell Ong Online Resume</title>
+    <title>Russell Ong is looking for a job!</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -77,9 +77,8 @@
             </header>
             <p>
               Hey there! My name is Russell and I am
-              currently in my 3rd year of Computer Science in the National
-			  University of Singapore (NUS), specialising in Artificial Intelligence & Information Retrieval. </br>
-			  
+              currently studying my 3rd year of Computer Science in the National
+			  University of Singapore (NUS), specialising in Artificial Intelligence & Information Retrieval.</br> </br>
 			  Before this I was studying business
               and specialized in entrepreneurship in Ngee Ann Polytechnic (NP). The idea of combining both technology and business really excites me, which is why everything that I have been doing involved both the technical and business aspects of things.
             </p>
@@ -102,9 +101,12 @@
 
 					</div>
 					<p>
+							•	Improved efficiency and speed of a feature by 8 times. </br>
 							•	Created responsive landing pages on React.js </br>
 							•	Developed features on payment app on Swift (iOS) </br>
 							•	Polished ideation, validation and pitching skills</br>
+							•	Runner-up for Demo 2019 for pitching and presentation.</br>
+
 					</p>
 					</div>
 
@@ -121,7 +123,7 @@
 					<p>
 							•	Created specific strategies to target niche for clients </br>
 							•	Managed network of YouTube channels - 27 million views on single YouTube channel </br>
-							•	Liased with video producers, affiliates and partners </br>
+							•	Liaised with video producers, affiliates and partners </br>
 							•	Automated large chunk of workflow from content creation to video production </br>
 
 					</p>
@@ -150,7 +152,7 @@
 				<section id="three">
 						<div class="container">
 						  <h3>Skillsets</h3>
-						  <h4>Programming Related</h4>
+						  <h4 style="text-align: center;">Programming Related</h4>
 						  <ul class="list-group">
 								<li class="list-group-item  align-items-center">
 								  Languages:</br>
@@ -176,8 +178,8 @@
 										Database:</br>
 										<span class="badge badge-primary badge-pill">PostgreSQL (Intermediate)</span>
 									  </li>
-							  </ul>
-							  <h4>Other Skillsets</h4>
+							  </ul> </br>
+							  <h4 style="text-align: center;">Other Skillsets</h4>
 							  <ul class="list-group">
 									<li class="list-group-item  align-items-center">
 											Digital Marketing:</br>
@@ -226,7 +228,7 @@
 				<ul class="list-group list-group-flush">
 					</br>
 
-					<h4 style = "text-align: center;">Others Include:</h4>
+					<h4 style = "text-align: center;">Others (cool) startup ideas:</h4>
 						<li class="list-group-item">Lost n Found: Social platform for organizing and planning search missions for missing people
 							</li>
 				</ul>
@@ -257,7 +259,7 @@
 				<ul class="list-group list-group-flush">
 					</br>
 
-					<h4 style = "text-align: center;">Others Include:</h4>
+					<h4 style = "text-align: center;">Other (tiring but satisfying) hackathons:</h4>
 						<li class="list-group-item">					Llama Attack: Tower Defense game developed with game sprites.
 							</li>
 						<li class="list-group-item">					Comp2Go: Organize sports competitions with a built in prize structure.
@@ -284,7 +286,7 @@
 					<ul class="list-group list-group-flush">
 						</br>
 
-							<h4 style = "text-align: center;">Others Include:</h4>
+							<h4 style = "text-align: center;">Other (soul-draining but extremely useful) projects :</h4>
 								<li class="list-group-item">											Dictionary: Help non-locals learn and keep English words in the app, included with a game with a time limit.
 									</li>
 								<li class="list-group-item">											Information Retrieval: Use NLTK and corpus to speed up searching information about Singapore laws.
