--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
         <p>
           Software Engineer by day,<br />
           sky's the limit by night.
-        </p>
+		</p>
+	</br>
+		<button type="button" onclick=" window.open('https://drive.google.com/file/d/14iOCCQAV4SH1kRWMpu503fYABzFC8HgB/view?usp=sharing','_blank')" class="btn btn-primary">Download My Resume!</button>
       </header>
       <nav id="nav">
         <ul>
