fix resume link

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           sky's the limit by night.
 		</p>
 	</br>
-		<button type="button" onclick=" window.open('https://drive.google.com/file/d/14iOCCQAV4SH1kRWMpu503fYABzFC8HgB/view?usp=sharing','_blank')" class="btn btn-primary">Download My Resume!</button>
+		<button type="button" onclick=" window.open('https://drive.google.com/open?id=1DT6S7ZBnnGFlE1nrdsHV0XfIaC1baUon','_blank')" class="btn btn-primary">Download My Resume!</button>
       </header>
       <nav id="nav">
         <ul>
