change mail address

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             >
           </li>
           <li>
-            <a href="mailto:russellongry@gmail.com" class="icon solid fa-envelope"
+            <a href="mailto:russellry@u.nus.edu" class="icon solid fa-envelope"
               ><span class="label">Email</span></a
             >
           </li>
