Type read mistakes fixed

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <p>
               Hey there! My name is Russell and I am
               currently studying my 3rd year of Computer Science in the National
-			  University of Singapore (NUS), specialising in Artificial Intelligence & Information Retrieval.</br> </br>
+			  University of Singapore (NUS), specializing in Artificial Intelligence & Information Retrieval.</br> </br>
 			  Before this I was studying business
               and specialized in entrepreneurship in Ngee Ann Polytechnic (NP). The idea of combining both technology and business really excites me, which is why everything that I have been doing involved both the technical and business aspects of things.
             </p>
@@ -198,7 +198,7 @@
 									  <span class="badge badge-primary badge-pill">Adobe Lightroom (Basic)</span>								</li>
 									</li>
 									<li class="list-group-item align-items-center">
-										Design/Protyping:</br>
+										Design/Prototyping:</br>
 									  <span class="badge badge-primary badge-pill">Sketch (Intermediate)</span>
 									  <span class="badge badge-primary badge-pill">Flinto (Basic)</span>
 									  <span class="badge badge-primary badge-pill">SuperNova (Basic)</span>
@@ -305,7 +305,7 @@
 						<div class="inner">
 						  <h4>Side Project: Toto Generator</h4>
 						  <p>
-							Collected and scraped past lottery numnbers to formulate winning numbers for the future using Python and Selenium.
+							Collected and scraped past lottery numbers to formulate winning numbers for the future using Python and Selenium.
 						</p>
 						</div>
 					  </article>
