add support page

--- a/index.html
+++ b/index.html
@@ -128,9 +128,9 @@
         <div class="container mx-auto px-6 text-gray-500">
             <p>&copy; <span id="currentYear"></span> Russell Ong. All rights reserved.</p>
             <p class="mt-2">
-                <a href="privacy.html" class="hover:text-blue-400 underline">Privacy Policy</a>
+                <a href="support.html" class="hover:text-blue-400 underline">Support</a> &middot; <a href="privacy.html" class="hover:text-blue-400 underline">Privacy Policy</a>
             </p>
-             </div>
+        </div>
     </footer>
 
     <script>
